# serde-reflection-proc

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
reflection/: Cargo.toml
reflection/examples/: compare.rs
reflection/src/: impl_reflection.rs  lib.rs
