[package]
name = "serde-reflection-proc"
version = "0.1.0"
authors = ["Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde-reflection = {git = "https://github.com/Ploppz/serde-reflection.git"}
serde-reflection-proc-derive = {path = "../derive"}
either = "1.5"
